# stonks

./: .gitignore  Cargo.toml  README.md  restarter.sh  ssh_server.sh
assets/data/: stonks_data.json
src/: agent.rs  events.rs  lib.rs  main.rs  market.rs  ssh_backend.rs  ssh_client.rs  ssh_server.rs  stonk.rs  tui.rs  ui.rs  utils.rs
