[package]
name = "stonks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
crossterm = "0.27.0"
ed25519-dalek = "2.1.1"
futures = "0.3.30"
image = "0.25.1"
include_dir = "0.7.3"
once_cell = "1.19.0"
rand = "0.8.5"
rand_distr = "0.4.3"
ratatui = "0.26.3"
russh = "0.43.0"
russh-keys = "0.43.0"
strum = "0.26.2"
strum_macros = "0.26.4"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
